# BFI-Personality-questionnaire

./: .gitignore  Dockerfile  README.rst  config.py  docker-entrypoint.sh  pyproject.toml  run.py  start_container.sh  wsgi.py
personality_bfi/: __init__.py  routes.py  views.py
personality_bfi/bfi_form/: routes.py
personality_bfi/bfi_questionnaire/: compute_traits.py  questionnaire.py  questionnaire_routes.py
personality_bfi/bfi_questionnaire/templates/: end.jinja2  instructions.jinja2  questionnaire.jinja2  results.jinja2
personality_bfi/home/: home.py  routes.py
personality_bfi/static/css/: styles.css
personality_bfi/static/data/: bfi-questions.csv
personality_bfi/templates/: layout.jinja2  meta.jinja2
tests/: test_personality_bfi.py
